# TissueSegmentation

./: CMakeLists.txt  README
Documents/Report001/: CMakeLists.txt  TissueSegmentationReport001.tex
Source/: AndImageFilter.cxx  ApproximateSignedDistanceMapImageFilter.cxx  BinaryGrindPeakImageFilter.cxx  BinaryMorphologicalOpeningImageFilter.cxx  CMakeLists.txt  ConnectedComponentsImageFilter.cxx  ExtractLabelAsMask.cxx  HistogramInRGBSpace.cxx  HistogramMembership.cxx  HoughTransform2DCirclesImageFilter.cxx  ImageClassifier.cxx  ImageReadWrite.cxx  InvertFilter.cxx  JoinMasks.cxx  MahalanobisClassifier.cxx  MembershipImageFilter.cxx  ShapeLabelObjectAccessors.cxx  ShapeOpeningLabelMapFilter.cxx  SignedDanielssonDistanceMapImageFilter.cxx  SignedMaurerDistanceMapImageFilter.cxx  VectorConfidenceConnected.cxx  VotingBinaryHoleFillingImageFilter.cxx  VotingBinaryIterativeHoleFillingImageFilter.cxx  WatershedSegmentation.cxx  itkMahalanobisDistanceImageFilter.h  itkMahalanobisDistanceImageFilter.txx  itkMembershipImageFilter.h  itkMembershipImageFilter.txx
Testing/: CMakeLists.txt  ernou.tor5564m12.tif.md5  ernou.tor5564m12_epithelium.tif.md5  ernou.tor5564m12_epithelium_seeds.txt  ernou.tor5564m12_small.tif.md5  ernou.tor5564m12_small_epithelium_seeds.txt  ernou.tor5564m12_small_germ_cells_seeds.txt  ernou.tor5564m12_small_lumen_seeds.txt  ernou.tor5564m12_small_mature_cells_seeds.txt  run.sh
